--- a/cabal.project
+++ b/cabal.project
@@ -145,6 +145,12 @@ source-repository-package
 
 source-repository-package
     type: git
+    location: https://github.com/wireapp/tasty
+    tag: 394943c7672e5ad269e5587528b7678caf3b0720
+    subdir: hunit
+
+source-repository-package
+    type: git
     location: https://gitlab.com/axeman/cql-io
     tag: c2b6aa995b5817ed7c78c53f72d5aa586ef87c36
 
@@ -157,12 +163,6 @@ source-repository-package
     type: git
     location: https://gitlab.com/twittner/wai-routing
     tag: 7e996a93fec5901767f845a50316b3c18e51a61d
-
-source-repository-package
-    type: git
-    location: https://github.com/wireapp/tasty.git
-    tag: 394943c7672e5ad269e5587528b7678caf3b0720
-    subdir: hunit
 
 allow-older: *
 allow-newer: *
