--- a/stack.yaml
+++ b/stack.yaml
@@ -151,6 +151,11 @@ extra-deps:
 - git: https://gitlab.com/axeman/cql-io
   commit: c2b6aa995b5817ed7c78c53f72d5aa586ef87c36
 
+- git: https://github.com/wireapp/tasty
+  commit: 394943c7672e5ad269e5587528b7678caf3b0720
+  subdirs:
+  - hunit
+
 ############################################################
 # Wire packages
 ############################################################
@@ -204,7 +209,7 @@ extra-deps:
 - QuickCheck-2.14.2
 - splitmix-0.1.0.4 # needed for QuickCheck
 - servant-mock-0.8.7
-- servant-swagger-ui-0.3.5.3.52.5
+- servant-swagger-ui-0.3.5.4.5.0
 - tls-1.5.5
 - cryptonite-0.29
 
