.envrc: Use nix-shell + direnv dump instead of nix print-dev-env
nix print-dev-env was introduced in 2.4 and this version hasn't made it to
debian-stable yet.

--- a/.envrc
+++ b/.envrc
@@ -19,7 +19,7 @@ if [[ ! -d "$env_dir" || ! -f "$layout_dir/nix-rebuild" || "$store_paths" != $(<
   [[ -d "$env_dir" ]] || mkdir -p "$env_dir"
 
   # this builds "wireServer.devShell" defined in ./nix/default.nix and outputs to ./.env
-  nix print-dev-env --impure --expr "(import ./nix).wireServer.devShell" > "${env_dir}/dev-shell.sh"
+  nix-shell ./nix -A wireServer.devShell --run 'direnv dump bash' > "${env_dir}/dev-shell.sh"
 
   nix-build ./nix -A profileEnv --out-link "${env_dir}/profile-env"
 
