.envrc: Use source_env insterad of eval and '<'

--- a/.envrc
+++ b/.envrc
@@ -26,7 +26,7 @@ if [[ ! -d "$env_dir" || ! -f "$layout_dir/nix-rebuild" || "$store_paths" != $(<
   echo "$store_paths" > "$layout_dir/nix-rebuild"
 fi
 
-eval "$(< "${env_dir}/dev-shell.sh")"
+source_env "${env_dir}/dev-shell.sh"
 
 # source .profile from `$env`. This sets NIX_PATH to pkgs defined in
 # ./nix/default.nix. Tis is useful for nix tooling that runs inside this direnv,
