CommitBundle: Add protobuf ser/deser

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -16,6 +16,7 @@ library
     Wire.API.Asset
     Wire.API.Call.Config
     Wire.API.Connection
+    Wire.API.ConverProtoLens
     Wire.API.Conversation
     Wire.API.Conversation.Action
     Wire.API.Conversation.Action.Tag
