nix: Use pkgs.buildEnv for development environment
Using haskellPacakges.shellFor directly forced us to use nix-shell which exports
too many environment variables. These environment variables cause a lot of
problems, specially for people not using NixOS.

This change reads buildInputs and nativeBuildInputs for the derivation produced
by haskellPacakges.shellFor and adds it to paths of pkgs.buildEnv. To allow
cabal to find C dependencies, we also have to export PKG_CONFIG_PATH.

--- a/.envrc
+++ b/.envrc
@@ -9,29 +9,22 @@ store_paths=$(find . -name default.nix  | grep -v '^./nix' | grep -v '^./dist-ne
 layout_dir=$(direnv_layout_dir)
 env_dir=./.env
 
-# The env_dir used to be a symlink to env in nix store, if it exists, delete it.
-[[ ! -L "$env_dir" ]] || rm -f "$env_dir"
-
 [[ -d "$layout_dir" ]] || mkdir -p "$layout_dir"
 
 if [[ ! -d "$env_dir" || ! -f "$layout_dir/nix-rebuild" || "$store_paths" != $(< "$layout_dir/nix-rebuild" ) ]]; then
-
-  [[ -d "$env_dir" ]] || mkdir -p "$env_dir"
-
-  # this builds "wireServer.devShell" defined in ./nix/default.nix and outputs to ./.env
-  nix-shell ./nix -A wireServer.devShell --run 'direnv dump bash' > "${env_dir}/dev-shell.sh"
-
-  nix-build ./nix -A profileEnv --out-link "${env_dir}/profile-env"
+  nix-build ./nix -A wireServer.devEnv --out-link ./.env
 
   echo "$store_paths" > "$layout_dir/nix-rebuild"
 fi
 
-source_env "${env_dir}/dev-shell.sh"
+PATH_add "./.env/bin"
+path_add "PKG_CONFIG_PATH" "./.env/lib/pkgconfig"
 
 # source .profile from `$env`. This sets NIX_PATH to pkgs defined in
 # ./nix/default.nix. Tis is useful for nix tooling that runs inside this direnv,
 # e.g. "nix-shell -p foo" will get "foo" for pkgs defined in ./nix/default.nix
-[[ -f "${env_dir}/profile-env/.profile" ]] && source_env "${env_dir}/profile-env/.profile"
+# [[ -f "${env_dir}/profile-env/.profile" ]] && source_env "${env_dir}/profile-env/.profile"
+[[ -f "./.env/.profile" ]] && source_env "./.env/.profile"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
