Also export LIBRARY_PATH

--- a/.envrc
+++ b/.envrc
@@ -19,6 +19,7 @@ fi
 
 PATH_add "./.env/bin"
 path_add "PKG_CONFIG_PATH" "./.env/lib/pkgconfig"
+path_add "LIBRARY_PATH" "./.env/lib"
 
 # source .profile from `$env`. This sets NIX_PATH to pkgs defined in
 # ./nix/default.nix. Tis is useful for nix tooling that runs inside this direnv,
