Connect user groups api to wire subsystem.

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -134,6 +134,7 @@ common common-all
     , schema-profunctor
     , servant
     , servant-client-core
+    , servant-server
     , sodium-crypto-sign
     , statistics
     , stomp-queue
@@ -374,6 +375,7 @@ test-suite wire-subsystems-tests
   other-modules:
     Spec
     Wire.ActivationCodeStore.InterpreterSpec
+    Wire.APICompatSpec
     Wire.AuthenticationSubsystem.InterpreterSpec
     Wire.EnterpriseLoginSubsystem.InterpreterSpec
     Wire.HashPassword.InterpreterSpec
@@ -429,4 +431,5 @@ test-suite wire-subsystems-tests
     , random
     , scientific
     , string-conversions
+    , wai
     , wire-subsystems
