--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -92,6 +92,7 @@ library
     , cassandra-util
     , conduit                               >=1.3.4.2
     , containers
+    , data-default
     , data-timeout                          >=0.3
     , exceptions                            >=0.6
     , extended
