WIP: Add test for email blocking

--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -112,6 +112,7 @@ library
     Test.AssetUpload
     Test.Auth
     Test.B2B
+    Test.BlockedDomains
     Test.Bot
     Test.Brig
     Test.Cargohold.API
