--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -89,6 +89,7 @@ library
 
   -- cabal-fmt: expand test
   exposed-modules:
+    API.BackgroundWorkerInternal
     API.Brig
     API.BrigCommon
     API.BrigInternal
