generate static swagger for v9, extend version suffix append function

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -329,6 +329,8 @@ library
     , QuickCheck                 >=2.14
     , quickcheck-instances       >=0.3.16
     , random                     >=1.2.0
+    , regex-base
+    , regex-tdfa
     , resourcet
     , retry                      ^>=0.9.3.1
     , saml2-web-sso
