--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -388,5 +388,6 @@ data:
       setAuditLogEmailRecipient: {{ .setAuditLogEmailRecipient }}
       {{- end }}
       setChallengeTTL: {{ or .setChallengeTTL 172800 }}
+      setEphemeralUserCreationEnabled: {{ .setEphemeralUserCreationEnabled }}
     {{- end }}
   {{- end }}
