WIP: Migrate displayException calls
Drop the backtraces when the resulting string is used in HTTP response
bodies.

--- a/libs/wai-utilities/wai-utilities.cabal
+++ b/libs/wai-utilities/wai-utilities.cabal
@@ -65,6 +65,7 @@ library
   exposed-modules:
     Network.Wai.Utilities
     Network.Wai.Utilities.Error
+    Network.Wai.Utilities.Exception
     Network.Wai.Utilities.Headers
     Network.Wai.Utilities.JSONResponse
     Network.Wai.Utilities.MockServer
