Add scratch implementation of store
Probably, not done. But, we have to start somewhere...

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -235,6 +235,8 @@ library
     Wire.SparAPIAccess
     Wire.SparAPIAccess.Rpc
     Wire.StoredUser
+    Wire.TeamCollaboratorsStore
+    Wire.TeamCollaboratorsStore.Postgres
     Wire.TeamInvitationSubsystem
     Wire.TeamInvitationSubsystem.Error
     Wire.TeamInvitationSubsystem.Interpreter
