--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -237,6 +237,8 @@ library
     Wire.StoredUser
     Wire.TeamCollaboratorsStore
     Wire.TeamCollaboratorsStore.Postgres
+    Wire.TeamCollaboratorsSubsystem
+    Wire.TeamCollaboratorsSubsystem.Interpreter
     Wire.TeamInvitationSubsystem
     Wire.TeamInvitationSubsystem.Error
     Wire.TeamInvitationSubsystem.Interpreter
