Allow more postgres clients in docker-ephemeral.

--- a/deploy/dockerephemeral/docker-compose.yaml
+++ b/deploy/dockerephemeral/docker-compose.yaml
@@ -290,6 +290,7 @@ services:
       POSTGRES_PASSWORD: "posty-the-gres"
       POSTGRES_USER: "wire-server"
       POSTGRES_DB: "backendA"
+    command: postgres -c max_connections=50
 
   cassandra:
     container_name: demo_wire_cassandra
