--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -130,6 +130,7 @@ nginx_conf:
     # galeb: integrations
   }
 
+  # TODO: Add upstream for collaborators endpoint
   upstreams:
     cargohold:
     - path: /conversations/([^/]*)/assets
