Use smallint to represent permissions

--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -189,6 +189,7 @@ library
     Test.Spar.MultiIngressSSO
     Test.Spar.STM
     Test.Swagger
+    Test.TeamCollaborators
     Test.Teams
     Test.TeamSettings
     Test.User
