--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -281,6 +281,7 @@ library
     , base16-bytestring
     , base64-bytestring
     , bilge
+    , bimap
     , bloodhound
     , bytestring
     , bytestring-conversion
