--- a/charts/redis-ephemeral/requirements.yaml
+++ b/charts/redis-ephemeral/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: redis
   version: 19.6.4 # redis 7.2.5
-  repository: https://charts.bitnami.com/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   alias: redis-ephemeral
