--- a/services/nginz/integration-test/conf/nginz/nginx.conf
+++ b/services/nginz/integration-test/conf/nginz/nginx.conf
@@ -394,6 +394,11 @@ http {
       proxy_pass http://brig;
     }
 
+    location ~* ^(/v[0-9]+)?/teams/([^/]*)/collaborators$ {
+      include common_response_with_zauth.conf;
+      proxy_pass http://brig;
+    }
+
     # Cargohold Endpoints
 
     location ~* ^(/v[0-9]+)?/assets {
