Add collaborators table and creation / get all endpoints (#4659)
Includes adding a store and subsystem. The store is also added to the
mini-backend. The used database is PostgreSQL.


---------

Co-authored-by: Matthias Fischmann <mf@zerobuzz.net>

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -425,6 +425,9 @@ nginx_conf:
     - path: /search
       envs:
       - all
+    - path: /teams/([^/]*)/collaborators$
+      envs:
+      - all
     - path: /teams/([^/]*)/invitations(.*)
       envs:
       - all
