--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -214,6 +214,7 @@ library
     Wire.API.Routes.Version.Wai
     Wire.API.Routes.Versioned
     Wire.API.Routes.WebSocket
+    Wire.API.Servant.Tentatively
     Wire.API.ServantProto
     Wire.API.SwaggerHelper
     Wire.API.SwaggerServant
