--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -150,6 +150,10 @@ settings:
       defaults:
         status: enabled
         lockStatus: unlocked
+    allowedGlobalOperations:
+      status: enabled
+      config:
+        mlsConversationReset20250709: false
 
 logLevel: Warn
 logNetStrings: false
