removed date from field name

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -188,7 +188,7 @@ config:
       allowedGlobalOperations:
         status: enabled
         config:
-          mlsConversationReset20250709: false
+          mlsConversationReset: false
 
   aws:
     region: "eu-west-1"
