--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -153,7 +153,7 @@ settings:
     allowedGlobalOperations:
       status: enabled
       config:
-        mlsConversationReset20250709: false
+        mlsConversationReset: false
 
 logLevel: Warn
 logNetStrings: false
