--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -324,6 +324,7 @@ library
     , extended
     , extra                                 >=1.3
     , galley-types                          >=0.65.0
+    , hasql-pool
     , hex
     , hs-opentelemetry-instrumentation-wai
     , hs-opentelemetry-sdk
