Real templating for the upstream templates

--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -259,6 +259,7 @@ library
     , HsOpenSSL
     , http-client
     , http-types
+    , interpolate
     , kan-extensions
     , lens
     , lens-aeson
