charts/galley: Fix templating

--- a/charts/galley/templates/secret.yaml
+++ b/charts/galley/templates/secret.yaml
@@ -22,5 +22,5 @@ data:
   {{- end }}
 
   {{- if .Values.secrets.pgPassword }}
-  pgPassword: {{ .pgPassword | b64enc | quote }}
+  pgPassword: {{ .Values.secrets.pgPassword | b64enc | quote }}
   {{- end }}
