Check consistency of group info (#4670)
* Add RatchetTree extension parser

* Match current group state and group info

* Refactor a subconversation test

* New implementation of group info check

* Fix index map generation for external commits

* fixup! Fix index map generation for external commits

* Make error more specific

* Test group info check

* Add MLS group info check and config option

* Add documentation for group info check

* Add checkGroupInfo to helm

* Add tests for group info check

* `make sanitize-pr`

* Remove leftover pragma

---------

Co-authored-by: Markus Läll <markus.l2ll@gmail.com>

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -133,6 +133,7 @@ library
     Wire.API.MLS.Proposal
     Wire.API.MLS.ProposalTag
     Wire.API.MLS.ProtocolVersion
+    Wire.API.MLS.RatchetTree
     Wire.API.MLS.Serialisation
     Wire.API.MLS.Servant
     Wire.API.MLS.SubConversation
