--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -40,7 +40,7 @@ config:
   # To set the password via a brig secret see `secrets.pgPassword`.
   #
   # `additionalVolumeMounts` and `additionalVolumes` can be used to mount
-  # additional files (e.g. certificates) into the brig container. This way
+  # additional files (e.g. certificates) into the galley container. This way
   # does not work for password files (parameter `passfile`), because
   # libpq-connect requires access rights (mask 0600) for them that we cannot
   # provide for random uids.
