WPB-18192 Allow collaborators to create team conversations (#4677)
* added test, added Collaborator permission check

* refactor IsPerm class

* galley: Integrate TeamCollaboratorsSubsystem, adds dep on postgresql

* charts/galley: Add config for postgresql connection

* Allow team collaborators to create team conversations

* charts/galley: Fix templating

* galley: Implement couple of internal APIs in terms of TeamSubsystem

* brig: Use TeamSubsystem instead of GalleyAPIAccess for getting list of team members

* Use TeamSubsystem.internalGetTeamMember instead of GalleyAPIAccess.getTeamMember

* TeamSubsystem: Implement internalGetTeamAdmins and use it everywhere GalleyAPIAccess was used

* TeamCollaboratorSubsystem: Only fanout collaborator being added to the admins

* Changelog and docs

---------

Co-authored-by: Akshay Mankar <itsakshaymankar@gmail.com>
Co-authored-by: Sven Tennie <sven.tennie@wire.com>

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -25,6 +25,11 @@ data:
       tlsCa: /etc/wire/galley/cassandra/{{- (include "tlsSecretRef" . | fromYaml).key }}
       {{- end }}
 
+    postgresql: {{ toYaml .postgresql | nindent 6 }}
+    {{- if hasKey $.Values.secrets "pgPassword" }}
+    postgresqlPassword: /etc/wire/galley/secrets/pgPassword
+    {{- end }}
+
     brig:
       host: brig
       port: 8080
