--- a/charts/galley/templates/secret.yaml
+++ b/charts/galley/templates/secret.yaml
@@ -20,3 +20,7 @@ data:
   rabbitmqUsername: {{ .Values.secrets.rabbitmq.username | b64enc | quote }}
   rabbitmqPassword: {{ .Values.secrets.rabbitmq.password | b64enc | quote }}
   {{- end }}
+
+  {{- if .Values.secrets.pgPassword }}
+  pgPassword: {{ .Values.secrets.pgPassword | b64enc | quote }}
+  {{- end }}
