[tmp] only run single test on CI

--- a/charts/brig/templates/tests/brig-integration.yaml
+++ b/charts/brig/templates/tests/brig-integration.yaml
@@ -161,6 +161,9 @@ spec:
           key: uploadXmlAwsSecretAccessKey
     {{- end }}
     {{- end }}
+    # TODO(leif): remove
+    - name: TASTY_PATTERN
+      value: "team invitation email"
     resources:
       requests:
         memory: "512Mi"
