use mustache to render emails, test all variables are substituted

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -118,6 +118,7 @@ common common-all
     , memory
     , mime
     , mime-mail
+    , mustache
     , network
     , network-conduit-tls
     , polysemy
