galley: Add feature config APIs and defaults for consumableNotifications

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -187,5 +187,9 @@ data:
         allowedGlobalOperations:
           {{- toYaml .settings.featureFlags.allowedGlobalOperations | nindent 10 }}
         {{- end }}
+        {{- if .settings.featureFlags.consumableNotifications }}
+        consumableNotifications:
+          {{- toYaml .settings.featureFlags.consumableNotifications | nindent 10 }}
+        {{- end }}
       {{- end }}
   {{- end }}
