--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -210,6 +210,10 @@ config:
         status: enabled
         config:
           mlsConversationReset: false
+      consumableNotifications:
+        defaults:
+          status: disabled
+          lockStatus: locked
 
   aws:
     region: "eu-west-1"
