--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -161,6 +161,10 @@ settings:
       status: enabled
       config:
         mlsConversationReset: false
+    consumableNotifications:
+      defaults:
+        status: disabled
+        lockStatus: locked
 
 logLevel: Warn
 logNetStrings: false
