replace nginz disco with native upstream resolver WPB-15302 (#4663)
- replace outside upstreams.txt file by an inline block, making use of
  'resolve' keyword (available since nginx 1.27.3). Current nix packages pins
  nginx to 1.28.

nix repl --file nix/default.nix
nix-repl> pkgs.nginx.version
"1.28.0"

(but actually hardcoded nginx to 1.26 for some reason! - So this commit 
also upgrades nginx from 1.26 to 1.28)

- remove nginz_disco code, and sidecar deployment
- drive-by improvement: be more graceful when shutting down: longer
  graceperiod, and use quit not sigterm (to process in-flight requests before
  shutting down - hopefully less 502s that way)


---------

Co-authored-by: Sven Tennie <sven.tennie@wire.com>
Co-authored-by: Stefan Matting <smatting@users.noreply.github.com>
Co-authored-by: Paolo Capriotti <paolo@capriotti.io>

--- a/charts/nginz/templates/deployment.yaml
+++ b/charts/nginz/templates/deployment.yaml
@@ -37,19 +37,6 @@ spec:
             matchLabels:
               app: nginz
       containers:
-      - name: nginz-disco
-        image: "{{ .Values.images.nginzDisco.repository }}:{{ .Values.images.nginzDisco.tag }}"
-        {{- if eq (include "includeSecurityContext" .) "true" }}
-        securityContext:
-          {{- toYaml .Values.podSecurityContext | nindent 10 }}
-        {{- end }}
-        volumeMounts:
-        - name: config
-          mountPath: /etc/wire/nginz/conf
-          readOnly: true
-        - name: upstreams
-          mountPath: /etc/wire/nginz/upstreams
-          readOnly: false
       - name: nginz
         image: "{{ .Values.images.nginz.repository }}:{{ .Values.images.nginz.tag }}"
         {{- if eq (include "includeSecurityContext" .) "true" }}
@@ -62,9 +49,6 @@ spec:
           readOnly: true
         - name: config
           mountPath: /etc/wire/nginz/conf
-          readOnly: true
-        - name: upstreams
-          mountPath: /etc/wire/nginz/upstreams
           readOnly: true
         - name: deeplink
           mountPath: /etc/wire/nginz/deeplink
@@ -88,6 +72,12 @@ spec:
             path: /status
             port: {{ .Values.config.http.httpPort }}
             scheme: HTTP
+        lifecycle:
+          preStop:
+            exec:
+              # kubernetes by default sends a SIGTERM to the container,
+              # we can be more graceful with in-flight requests using quit
+              command: ["sh", "-c", "nginx -c /etc/wire/nginz/conf/nginx.conf -s quit && sleep 25"]
         resources:
 {{ toYaml .Values.resources | indent 12 }}
       dnsPolicy: ClusterFirst
@@ -99,8 +89,6 @@ spec:
       - name: secrets
         secret:
           secretName: nginz
-      - name: upstreams
-        emptyDir: {}
       - name: deeplink
         configMap:
           name: nginz-deeplink
