--- a/integration/integration.cabal
+++ b/integration/integration.cabal
@@ -262,6 +262,7 @@ library
     , HsOpenSSL
     , http-client
     , http-types
+    , interpolate
     , kan-extensions
     , lens
     , lens-aeson
@@ -277,6 +278,7 @@ library
     , proto-lens
     , random
     , raw-strings-qq
+    , regex
     , regex-base
     , regex-tdfa
     , retry
