[WPB-1753] list user groups (#4607)

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -260,6 +260,7 @@ library
     Wire.API.User.Search
     Wire.API.UserEvent
     Wire.API.UserGroup
+    Wire.API.UserGroup.Pagination
     Wire.API.UserMap
     Wire.API.Util.Aeson
     Wire.API.VersionInfo
@@ -627,6 +628,7 @@ test-suite wire-api-golden-tests
     Test.Wire.API.Golden.Manual.Login_user
     Test.Wire.API.Golden.Manual.LoginId_user
     Test.Wire.API.Golden.Manual.MLSKeys
+    Test.Wire.API.Golden.Manual.Pagination
     Test.Wire.API.Golden.Manual.Presence
     Test.Wire.API.Golden.Manual.Push
     Test.Wire.API.Golden.Manual.PushRemove
