--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -84,6 +84,7 @@ common common-all
     , cassandra-util
     , conduit
     , containers
+    , contravariant
     , cql
     , crypton
     , currency-codes
@@ -134,6 +135,7 @@ common common-all
     , schema-profunctor
     , servant
     , servant-client-core
+    , servant-server
     , sodium-crypto-sign
     , statistics
     , stomp-queue
@@ -368,7 +370,7 @@ test-suite wire-subsystems-tests
   -- `ghcid --command 'cabal repl test:wire-subsystems-tests' --test='main'`.
   hs-source-dirs:     test/unit
   main-is:            ../Main.hs
-  ghc-options:        -fplugin=Polysemy.Plugin -Wno-x-partial
+  ghc-options:        -fplugin=Polysemy.Plugin -Wno-x-partial -threaded
 
   -- cabal-fmt: expand test/unit
   other-modules:
@@ -429,4 +431,5 @@ test-suite wire-subsystems-tests
     , random
     , scientific
     , string-conversions
+    , wai
     , wire-subsystems
