test invitation email

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -366,6 +366,7 @@ executable brig-integration
     API.Team
     API.Team.Util
     API.TeamUserSearch
+    API.Template
     API.User
     API.User.Account
     API.User.Auth
