--- a/charts/postgresql-external/Chart.yaml
+++ b/charts/postgresql-external/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: Refer to postgresql IPs located outside kubernetes by specifying IPs manually
+description: Refer to PostgreSQL IPs located outside Kubernetes by specifying IPs manually
 name: postgresql-external
 version: 0.0.42
